Remove unnecessary comments in food.html

--- a/food.html
+++ b/food.html
@@ -59,10 +59,9 @@
                     <h2>All Food Items</h2>
                     <p>Browse delicious food from all restaurants. Click to add to cart!</p>
                 </div>
-
-                <!-- Food items grid -->
+                
                 <div class="restaurant-grid" id="all-food-items">
-                    <!-- Dynamic content will be inserted here by JavaScript -->
+                    <!-- Food items -->
                 </div>
             </section>
         </main>
